2003-08-24  Bruno Haible  <bruno@clisp.org>

	* plural-count.h: New file.
	* plural-count.c: New file, extracted from msgmerge.c.
	* Makefile.am (noinst_HEADERS): Add plural-count.h.
	(msgmerge_SOURCES): Add plural-count.c.
	* Makefile.msvc (msgmerge_OBJECTS): Add plural-count.obj.
	(plural-count.obj): New rule.
	* Makefile.vms (msgmerge_OBJECTS): Add plural-count.obj.
	(plural-count.obj): New rule.

2003-08-24  Bruno Haible  <bruno@clisp.org>

	Support for building DLLs on Windows.
	* format.h (formatstring_c, formatstring_python, formatstring_lisp,
	formatstring_elisp, formatstring_librep, formatstring_smalltalk,
	formatstring_java, formatstring_awk, formatstring_pascal,
	formatstring_ycp, formatstring_tcl, formatstring_perl,
	formatstring_perl_brace, formatstring_php, formatstring_gcc_internal,
	formatstring_parsers): Add DLL_VARIABLE attribute.
	* message.h (format_language, format_language_pretty): Likewise.
	* msgl-cat.h (more_than, less_than, use_first, msgcomm_mode,
	omit_header): Likewise.
	* plural-table.h (plural_table, plural_table_size): Likewise.
	* po-charset.h (po_charset_ascii, po_charset_utf8, po_lex_charset,
	po_lex_iconv, po_lex_weird_cjk): Likewise.
	* po-lex.h (gram_pos, gram_pos_column, gram_max_allowed_errors,
	pass_obsolete_entries): Likewise.
	* read-po.h (line_comment, allow_duplicates, input_syntax): Likewise.
	* write-mo.h (alignment, no_hash_table): Likewise.
	* Makefile.am (po-gram-gen2.h): Likewise.

2003-08-24  Bruno Haible  <bruno@clisp.org>

	* Makefile.msvc (gettext-po.obj, gettextpo.lib, gettextpo.res): New
	rules.
	(all): Depend on gettextpo.lib.
	(install, installdirs, uninstall): Install/uninstall gettext-po.h,
	gettextpo.dll and gettextpo.lib.
	* Makefile.vms (gettext-po.obj, gettextpo.olb): New rules.
	(all): Depend on gettextpo.olb.
	(install, installdirs, uninstall): Install/uninstall gettext-po.h,
	gettextpo.olb.

2003-08-24  Bruno Haible  <bruno@clisp.org>
